# Manolo2

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
Instructions/: Database.md  Orquestator.md  repo config.md  tool1.md  tool2.md
manolo/: __init__.py  __main__.py  settings.py
manolo/llm_client/: __init__.py  base.py  exceptions.py  llama_cpp_provider.py  openai_provider.py  registry.py  streaming.py
manolo/models/: dto.py
manolo/orchestrator/: __init__.py  context_builder.py  errors.py  policies.py  runner.py  state.py
manolo/providers/: fx_http_provider.py
manolo/repositories/: __init__.py  interfaces.py
manolo/repositories/sqlite/: calendar_repo.py  connection.py  conversations_repo.py  fx_cache_repo.py  memory_repo.py  messages_repo.py  run_steps_repo.py  runs_repo.py  schema.sql
manolo/server/: app.py  lifecycle.py
manolo/server/routers/: calendar.py  chat.py  conversations.py  fx.py
manolo/server/static/: app.js  index.html  styles.css
manolo/services/: calendar_service.py  fx_service.py  memory_service.py
manolo/tools/: __init__.py  base.py  calendar_tool.py  executor.py  registry.py  usd_price_tool.py
tests/: conftest.py
tests/integration/: test_health.py
tests/unit/: test_calendar_service_erase.py  test_calendar_tool_edges.py  test_connection_disk.py  test_context_builder.py  test_context_builder_more.py  test_conversations_get_missing.py  test_errors_import.py  test_executor_extended.py  test_fx_http_provider.py  test_fx_service_cache.py  test_fx_service_errors.py  test_llm_openai.py  test_memory_service.py  test_openai_helpers.py  test_openai_http_errors.py  test_orchestrator_limits.py  test_orchestrator_policy_paths.py  test_orchestrator_run.py  test_orchestrator_tool_branch.py  test_policies.py  test_registry.py  test_sqlite_calendar_erase.py  test_sqlite_calendar_range.py  test_sqlite_repos.py  test_streaming.py  test_streaming_more.py  test_tools.py  test_tools_base_validate.py
